--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@types/node": "^14.0.13",
     "gts": "^2.0.2",
+    "html-webpack-plugin": "^4.3.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
