--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --progress --colors"
+    "start": "webpack-dev-server --progress --colors",
+    "release": "webpack --progress --colors"
   },
   "devDependencies": {
     "@types/node": "^14.0.13",
