--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
     "start": "webpack-dev-server --progress --colors",
     "release": "webpack --progress --colors"
   },
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
   "devDependencies": {
     "@types/node": "^14.0.13",
+    "@types/react": "^16.9.36",
+    "@types/react-dom": "^16.9.8",
     "gts": "^2.0.2",
     "html-webpack-plugin": "^4.3.0",
+    "ts-loader": "^7.0.5",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
