--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,11 @@
     "rootDir": ".",
     "outDir": "build",
     "esModuleInterop": true,
+    "jsx": "react",
+    "lib": ["DOM"]
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "src/**/*.tsx"
   ]
 }
