--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "subx": "^0.9.7"
+    "react-subx": "^0.7.2",
+    "subx": "^0.9.8"
   },
   "devDependencies": {
     "@types/node": "^14.0.13",
