--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "release": "webpack --progress --colors"
   },
   "dependencies": {
+    "antd": "^4.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-subx": "^0.7.2",
@@ -14,6 +15,7 @@
     "@types/node": "^14.0.13",
     "@types/react": "^16.9.36",
     "@types/react-dom": "^16.9.8",
+    "eslint-plugin-react": "^7.20.0",
     "gts": "^2.0.2",
     "html-webpack-plugin": "^4.3.0",
     "ts-loader": "^7.0.5",
