--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@types/node": "^14.0.13",
     "@types/react": "^16.9.36",
     "@types/react-dom": "^16.9.8",
+    "css-loader": "^3.6.0",
     "eslint-plugin-react": "^7.20.0",
     "gts": "^2.0.2",
     "html-webpack-plugin": "^4.3.0",
+    "style-loader": "^1.2.1",
     "ts-loader": "^7.0.5",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5",
+    "wait-for-async": "^0.5.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
