--- a/package.json
+++ b/package.json
@@ -5,18 +5,25 @@
     "start": "webpack-dev-server --progress --colors",
     "release": "webpack --progress --colors"
   },
+  "engines": {
+    "node": ">=10.x"
+  },
   "dependencies": {
+    "@types/urijs": "^1.19.9",
     "antd": "^4.3.4",
+    "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-subx": "^0.7.2",
-    "subx": "^0.9.8"
+    "subx": "^0.9.8",
+    "urijs": "^1.19.2"
   },
   "devDependencies": {
     "@types/node": "^14.0.13",
-    "@types/react": "^16.9.36",
+    "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
     "css-loader": "^3.6.0",
+    "dotenv-override-true": "^6.2.0",
     "eslint-plugin-react": "^7.20.0",
     "gts": "^2.0.2",
     "html-webpack-plugin": "^4.3.0",
@@ -26,7 +33,7 @@
     "typescript": "^3.9.5",
     "wait-for-async": "^0.5.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "yarn-upgrade-all": "^0.5.2"
   }
