--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
-GITHUB_AUTHORIZATION_CALLBACK_URL=
+GITHUB_NOTE_CLIENT_ID=
+GITHUB_NOTE_CLIENT_SECRET=
+GITHUB_NOTE_AUTHORIZATION_CALLBACK_URL=
