--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
     "css-loader": "^3.6.0",
-    "dotenv-override-true": "^6.2.0",
+    "dotenv": "^8.2.0",
     "eslint-plugin-react": "^7.20.0",
     "gts": "^2.0.2",
     "html-webpack-plugin": "^4.3.0",
